--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -728,7 +728,7 @@
     </p>
     <ul>
       <li>
-        Wikidata: Handle new Wikidata JSON schema in 2014-09-12 dump (affects any page using {{#property}}). See: <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property.html" id="xolnki_8" title="Diagnostics/Wikidata/Property">Diagnostics/Wikidata/Property</a> <a href="https://simple.wikipedia.org/wiki/Google" rel="nofollow" class="external free">https://simple.wikipedia.org/wiki/Google</a> <a href="https://hu.wikipedia.org/wiki/Piszkos_Harry" rel="nofollow" class="external free">https://hu.wikipedia.org/wiki/Piszkos_Harry</a> <a href="https://pl.wikipedia.org/wiki/Województwo_małopolskie" rel="nofollow" class="external free">https://pl.wikipedia.org/wiki/Województwo_małopolskie</a> <a href="https://en.wikipedia.org/wiki/Alberta" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Alberta</a> <a href="https://it.wikipedia.org/wiki/Torino" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Torino</a> <a href="https://en.wikipedia.org/wiki/'s-Graveland" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/'s-Graveland</a>
+        Wikidata: Handle new Wikidata JSON schema in 2014-09-12 dump (affects any page using {{#property}}). See: <a href="http://xowa.org/home/wiki/Diagnostics/Wikidata/Property.html" id="xolnki_8" title="Diagnostics/Wikidata/Property" class="xowa-visited">Diagnostics/Wikidata/Property</a> <a href="https://simple.wikipedia.org/wiki/Google" rel="nofollow" class="external free">https://simple.wikipedia.org/wiki/Google</a> <a href="https://hu.wikipedia.org/wiki/Piszkos_Harry" rel="nofollow" class="external free">https://hu.wikipedia.org/wiki/Piszkos_Harry</a> <a href="https://pl.wikipedia.org/wiki/Województwo_małopolskie" rel="nofollow" class="external free">https://pl.wikipedia.org/wiki/Województwo_małopolskie</a> <a href="https://en.wikipedia.org/wiki/Alberta" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Alberta</a> <a href="https://it.wikipedia.org/wiki/Torino" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Torino</a> <a href="https://en.wikipedia.org/wiki/'s-Graveland" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/'s-Graveland</a>
       </li>
       <li>
         Scribunto: Add Frame Title for ExpandTemplate (affects script error on any page with an italicized page title). See: <a href="https://en.wikipedia.org/wiki/A_Modest_Proposal" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/A_Modest_Proposal</a> <a href="https://en.wikipedia.org/wiki/The_World_Factbook" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/The_World_Factbook</a> <a href="https://en.wikipedia.org/wiki/Citizen_Kane" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Citizen_Kane</a>
@@ -2108,7 +2108,7 @@
     </p>
     <ul>
       <li>
-        Options: Automatically remove new line from end of value if in textarea (affects causes default value to be automatically saved, even though no change was made (tidy always adds trailing \n to textarea)); EX:Go to [[Options/Menus]] -&gt; Press Save -&gt; Check user_cfg.gfs -&gt; entries for menus exist (even though no change was made). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_33" title="Options/Menus" class="xowa-visited">Options/Menus</a> [broken since:v1.6.1.1]
+        Options: Automatically remove new line from end of value if in textarea (affects causes default value to be automatically saved, even though no change was made (tidy always adds trailing \n to textarea)); EX:Go to [[Options/Menus]] -&gt; Press Save -&gt; Check user_cfg.gfs -&gt; entries for menus exist (even though no change was made). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_33" title="Options/Menus">Options/Menus</a> [broken since:v1.6.1.1]
       </li>
     </ul>
     <p>
@@ -2295,7 +2295,7 @@
     </p>
     <ul>
       <li>
-        Gui: Add default shortcut for Font Reset; EX:Ctrl + 0 {requested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_45" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Gui: Add default shortcut for Font Reset; EX:Ctrl + 0 {requested by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_45" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
     </ul>
     <p>
@@ -2345,10 +2345,10 @@
         Bookmarks: Fix "Add bookmark" no longer working. [broken since:v1.6.1.1]
       </li>
       <li>
-        Gui.Menu: Update menu text after configuring menus (affects menu items going blank after configuring (requires restart)). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_46" title="Options/Menus" class="xowa-visited">Options/Menus</a> [broken since:v1.6.1.1]
+        Gui.Menu: Update menu text after configuring menus (affects menu items going blank after configuring (requires restart)). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_46" title="Options/Menus">Options/Menus</a> [broken since:v1.6.1.1]
       </li>
       <li>
-        Gui.Menu: Add whitespace to default menu source (affects default menu source lines not indenting properly). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_47" title="Options/Menus" class="xowa-visited">Options/Menus</a> [broken since:v1.6.1.1]
+        Gui.Menu: Add whitespace to default menu source (affects default menu source lines not indenting properly). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_47" title="Options/Menus">Options/Menus</a> [broken since:v1.6.1.1]
       </li>
     </ul>
     <p>
@@ -2371,7 +2371,7 @@
         Gui.Page: Add menu item for Reload Page.
       </li>
       <li>
-        Gui.Menu: Allow same menu item to be added multiple times to same menu; EX:add_btn_default('xowa.app.exit');\nadd_btn_default('xowa.app.exit');. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_48" title="Options/Menus" class="xowa-visited">Options/Menus</a>
+        Gui.Menu: Allow same menu item to be added multiple times to same menu; EX:add_btn_default('xowa.app.exit');\nadd_btn_default('xowa.app.exit');. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_48" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
         Gui.Page: Add menu item for Reset Font.
@@ -2551,7 +2551,7 @@
     </p>
     <ul>
       <li>
-        Gui: Support customizable keyboard shortcuts. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_55" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Gui: Support customizable keyboard shortcuts. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_55" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
       <li>
         Gui: Update UI language dynamically (do not require restart). See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_56" title="Options/Language">Options/Language</a>
@@ -2580,7 +2580,7 @@
         Jtidy: Do not trim empty block element if it has attributes (affects incorrect table layout). See: <a href="https://ko.wikisource.org/wiki/Main_Page" rel="nofollow" class="external free">https://ko.wikisource.org/wiki/Main_Page</a>
       </li>
       <li>
-        Jtidy: Do not add \n after &lt;span&gt; in &lt;pre&gt; (affects syntaxhighlight showing line numbers on different line). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_58" title="Options/Menus" class="xowa-visited">Options/Menus</a>
+        Jtidy: Do not add \n after &lt;span&gt; in &lt;pre&gt; (affects syntaxhighlight showing line numbers on different line). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_58" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
         Parser.Table: Do not insert &lt;tr&gt; between two nested tables (affects {|\n&lt;table&gt;&lt;tr&gt;&lt;td&gt;abc&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;). See: <a href="https://it.wikipedia.org/wiki/Portale:Animali" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Portale:Animali</a> <a href="https://it.wikipedia.org/wiki/Main_Page" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Main_Page</a>
@@ -2611,7 +2611,7 @@
         Lang: Add lang codes for other minor languages; EX:akz; sxu; etc...
       </li>
       <li>
-        Xtns.Xowa_cmd: Do not double-parse content inside &lt;xowa_cmd&gt; (affects references showing up twice in XOWA home wiki). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_59" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Xtns.Xowa_cmd: Do not double-parse content inside &lt;xowa_cmd&gt; (affects references showing up twice in XOWA home wiki). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_59" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
       <li>
         Log: Removed unused log messages. See: <a href="http://xowa.org/home/wiki/Special:XowaSystemData%3Ftype%3Dlog_session.html" id="xolnki_60" title="Special:XowaSystemData?type=log session">Special:XowaSystemData?type=log session</a>
@@ -2659,7 +2659,7 @@
         Html.Jtidy: Add Jtidy for fixing invalid HTML (currently optional; will become default). See: bin/any/java/jtidy/jtidy-r938.jar
       </li>
       <li>
-        Gui: Add Options page for Shortcuts (read-only). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_61" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Gui: Add Options page for Shortcuts (read-only). See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_61" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
       <li>
         Special.XowaSystemData: Add Special Page to show contents of session log and other files; EX:Menu -&gt; Help -&gt; System data.
@@ -2708,7 +2708,7 @@
         Javascript.Timeline: Remove &lt;timeline&gt; tag from within pre (affects timeline sometimes showing in black colors when jtidy is enabled); EX:old: &lt;pre&gt;&lt;timeline&gt;code&lt;/timeline&gt;&lt;/pre&gt;; new: &lt;pre&gt;code&lt;/pre&gt;. See: <a href="https://fr.wikipedia.org/wiki/Quimper" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Quimper</a>
       </li>
       <li>
-        Javascript.TableSorter: Sort by &lt;input&gt; if available; EX:bin/any/javascript/article-view/jquery.tablesorter.js. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_62" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Javascript.TableSorter: Sort by &lt;input&gt; if available; EX:bin/any/javascript/article-view/jquery.tablesorter.js. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_62" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
       <li>
         Url: Escape &amp; for external links when using default view_web launcher of "cmd /c" on Windows; EX:cmd /c start "http://www.culture.gouv.fr/public/mistral/merimee_fr?ACTION=CHERCHER&amp;FIELD_1=REF&amp;VALUE_1=PA59000162". See: <a href="https://fr.wikipedia.org/wiki/Liste_des_monuments_historiques_du_Nord_%28A-L%29" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Liste_des_monuments_historiques_du_Nord_%28A-L%29</a>
@@ -2778,13 +2778,13 @@
         Gui: Allow pages to be loaded asynchronously when using "Open Link in Tab".
       </li>
       <li>
-        Gui: Add popup menu for tabs. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_64" title="Options/Menus" class="xowa-visited">Options/Menus</a>
+        Gui: Add popup menu for tabs. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_64" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
-        Gui: Add popup menu for clicking on link. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_65" title="Options/Menus" class="xowa-visited">Options/Menus</a>
+        Gui: Add popup menu for clicking on link. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_65" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
-        Gui: Add popup menu for clicking on file. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_66" title="Options/Menus" class="xowa-visited">Options/Menus</a>
+        Gui: Add popup menu for clicking on file. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_66" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
         Gui: Add option for min chars / max chars in tab buttons. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_67" title="Options/Tabs">Options/Tabs</a>
@@ -4026,7 +4026,7 @@
         Math: Note that MikTeX may fail to update images dynamically for first page {detected by William}.
       </li>
       <li>
-        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents" class="xowa-visited">Help/Contents</a>
+        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents">Help/Contents</a>
       </li>
     </ul>
     <p>
