--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -630,7 +630,7 @@
         Interwiki: Show all available languages "In other languages", not just those specified in xowa.gfs. See: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
       </li>
       <li>
-        Import: Add support for building custom wikis. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_8" title="App/Xtn/Import/Dansguardian" class="xowa-visited">App/Xtn/Import/Dansguardian</a>
+        Import: Add support for building custom wikis. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_8" title="App/Xtn/Import/Dansguardian">App/Xtn/Import/Dansguardian</a>
       </li>
     </ul>
     <p>
@@ -680,7 +680,7 @@
         Doc: Add details for installing Firefox Addon for Pale Moon {suggested by pirate}. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_9" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a>
       </li>
       <li>
-        Doc: Add details for dansguardian filter. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_10" title="App/Xtn/Import/Dansguardian" class="xowa-visited">App/Xtn/Import/Dansguardian</a>
+        Doc: Add details for dansguardian filter. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_10" title="App/Xtn/Import/Dansguardian">App/Xtn/Import/Dansguardian</a>
       </li>
     </ul>
     <p>
@@ -2086,7 +2086,7 @@
     </p>
     <ul>
       <li>
-        Options: Add Show keybinding {contributed by gnosygnu}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_41" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Options: Add Show keybinding {contributed by gnosygnu}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_41" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
     </ul>
     <p>
