--- a/home/wiki/Diagnostics/Wikidata/Property.html
+++ b/home/wiki/Diagnostics/Wikidata/Property.html
@@ -93,13 +93,7 @@
           14 Dec 1799
         </td>
         <td>
-          <span style='color: red;'>fail:<br>
-          '14 Dec 1799</span>
-<pre>
-<span style='color: red;'>'<br>
-'15 Oct 1799
- '</span>
-</pre>
+          <span style='color: green;'>pass</span>
         </td>
       </tr>
       <tr>
