--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -203,7 +203,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Design/Language_files.html" id="xolnki_29" title="Dev/Design/Language files">Language files</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_30" title="App/UI/Menus" class="xowa-visited">Menu configuration</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_30" title="App/UI/Menus">Menu configuration</a>
             </li>
           </ul>
         </td>
@@ -264,7 +264,7 @@
               <a href="http://xowa.org/home/wiki/App/Xtn/Html/Scripts.html" id="xolnki_40" title="App/Xtn/Html/Scripts">Sortable/collapsible tables</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_41" title="App/Xtn/Import/Dansguardian" class="xowa-visited">Dansguardian filter</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_41" title="App/Xtn/Import/Dansguardian">Dansguardian filter</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_42" title="App/Xtn/Browser/XOWA viewer">Firefox Addon</a>
