--- a/home/wiki/Options/Import.html
+++ b/home/wiki/Options/Import.html
@@ -520,7 +520,7 @@ http://ftp.fi.muni.cz/pub/wikimedia/
                 <span class="reference-text">Note that servers are prioritized from left-to-right. In the default example, <b>your.org</b> will be tried first. If it is offline, then the next server -- <b>dumps.wikimedia.org</b> -- will be tried, etc.</span>
               </li>
               <li>
-                <span class="reference-text">See <a href="http://xowa.org/home/wiki/App/Import/Download/Dump_servers.html" id="xolnki_2" title="App/Import/Download/Dump servers" class="xowa-visited">App/Import/Download/Dump_servers</a> for more info</span>
+                <span class="reference-text">See <a href="http://xowa.org/home/wiki/App/Import/Download/Dump_servers.html" id="xolnki_2" title="App/Import/Download/Dump servers">App/Import/Download/Dump_servers</a> for more info</span>
               </li>
             </ul>
           </li>
