--- a/home/wiki/Options/Menus.html
+++ b/home/wiki/Options/Menus.html
@@ -813,7 +813,7 @@ add_btn_default('xowa.gui.browser.prog_log.show');
               <li>
                 <span class="reference-text">At the top of the window.</span>
               </li>
-            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_2" title="App/UI/Menus" class="xowa-visited">App/UI/Menus</a></span>
+            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_2" title="App/UI/Menus">App/UI/Menus</a></span>
           </li>
           <li id="cite_note-browser.tabs.btns.source-2">
             <span class="mw-cite-backlink"><a href="#cite_ref-browser.tabs.btns.source_2-0">^</a></span> <span class="reference-text">Specify the source for the tab button popup menu. This menu shows when:</span>
@@ -821,7 +821,7 @@ add_btn_default('xowa.gui.browser.prog_log.show');
               <li>
                 <span class="reference-text">Right-clicking on a tab button or in the blank area in the tab bar</span>
               </li>
-            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_3" title="App/UI/Menus" class="xowa-visited">App/UI/Menus</a></span>
+            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_3" title="App/UI/Menus">App/UI/Menus</a></span>
           </li>
           <li id="cite_note-browser.html.page.source-3">
             <span class="mw-cite-backlink"><a href="#cite_ref-browser.html.page.source_3-0">^</a></span> <span class="reference-text">Specify the source for the HTML box's popup menu. This menu shows when:</span>
@@ -829,7 +829,7 @@ add_btn_default('xowa.gui.browser.prog_log.show');
               <li>
                 <span class="reference-text">Right-clicking anywhere in the HTML area and nothing is selected</span>
               </li>
-            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_4" title="App/UI/Menus" class="xowa-visited">App/UI/Menus</a></span>
+            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_4" title="App/UI/Menus">App/UI/Menus</a></span>
           </li>
           <li id="cite_note-browser.html.link.source-4">
             <span class="mw-cite-backlink"><a href="#cite_ref-browser.html.link.source_4-0">^</a></span> <span class="reference-text">Specify the source for the HTML box's link menu. This menu shows when:</span>
@@ -837,7 +837,7 @@ add_btn_default('xowa.gui.browser.prog_log.show');
               <li>
                 <span class="reference-text">Right-clicking on a link or selected text in the HTML area</span>
               </li>
-            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_5" title="App/UI/Menus" class="xowa-visited">App/UI/Menus</a></span>
+            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_5" title="App/UI/Menus">App/UI/Menus</a></span>
           </li>
           <li id="cite_note-browser.html.file.source-5">
             <span class="mw-cite-backlink"><a href="#cite_ref-browser.html.file.source_5-0">^</a></span> <span class="reference-text">Specify the source for the HTML box's file menu. This menu shows when:</span>
@@ -845,7 +845,7 @@ add_btn_default('xowa.gui.browser.prog_log.show');
               <li>
                 <span class="reference-text">Right-clicking on an image or any other file in the HTML area</span>
               </li>
-            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_6" title="App/UI/Menus" class="xowa-visited">App/UI/Menus</a></span>
+            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_6" title="App/UI/Menus">App/UI/Menus</a></span>
           </li>
           <li id="cite_note-browser.prog-6">
             <span class="mw-cite-backlink"><a href="#cite_ref-browser.prog_6-0">^</a></span> <span class="reference-text">Specify the source for the status bar popup menu. This menu shows when:</span>
@@ -853,7 +853,7 @@ add_btn_default('xowa.gui.browser.prog_log.show');
               <li>
                 <span class="reference-text">Right-clicking on the status bar at the bottom of the screen</span>
               </li>
-            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_7" title="App/UI/Menus" class="xowa-visited">App/UI/Menus</a></span>
+            </ul><span class="reference-text">For more information, see <a href="http://xowa.org/home/wiki/App/UI/Menus.html" id="xolnki_7" title="App/UI/Menus">App/UI/Menus</a></span>
           </li>
         </ol>
       </div>
