--- a/home/wiki/Urls/en.wikipedia.org/html.html
+++ b/home/wiki/Urls/en.wikipedia.org/html.html
@@ -2,108 +2,87 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>App/UI/Printing - XOWA</title>
+  <title>Urls/en.wikipedia.org/html - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style data-source="xowa" type="text/css">
-.console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
-  .code
-  ,.path
-  ,.url      {font-family: monospace; color: black   ; background-color: #f9f9f9  ; border: medium solid #f9f9f9;}
-  .bold      {font-weight: 900;}
-</style>
-<style data-source="xowa" type="text/css">
-.console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
-  .code
-  ,.path
-  ,.url      {font-family: monospace; color: black   ; background-color: #f9f9f9  ; border: medium solid #f9f9f9;}
-  .bold      {font-weight: 900;}
-</style>
-
+  
 </head>
 <body class="mediawiki ltr sitedir-ltr ns-0 ns-subject skin-vector action-submit vector-animateLayout" spellcheck="false">
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>App/UI/Printing</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Urls/en.wikipedia.org/html</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
-    <p>
-      This bug was fixed as of v2.6.5. This page is provided for historical reasons.
-    </p>
-    <hr>
-    <p>
-      XOWA currently does not support printing by default. This limitation is due to an underlying bug in the SWT HTML browser: <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=376358" rel="nofollow" class="external free">https://bugs.eclipse.org/bugs/show_bug.cgi?id=376358</a>
-    </p>
     <h2>
-      <span class="mw-headline" id="Printing_after_saving_to_a_file">Printing after saving to a file</span>
+      <span class="mw-headline" id="English_Wikipedia">English Wikipedia</span>
     </h2>
-    <p>
-      The simplest way to print a document is to do the following:
-    </p>
+    <h3>
+      <span class="mw-headline" id="HTML_dbs_as_of_2016-08">HTML dbs as of 2016-08</span>
+    </h3>
     <ul>
       <li>
-        Right-click anywhere in the HTML box
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_core.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_core.zip</a>
       </li>
       <li>
-        Choose File -&gt; Save As
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html.zip</a>
       </li>
       <li>
-        Save the file
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.002.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.002.zip</a>
       </li>
       <li>
-        Open the file in Mozilla Firefox
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.003.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.003.zip</a>
       </li>
       <li>
-        Choose File -&gt; Print
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Printing_directly_from_XOWA">Printing directly from XOWA</span>
-    </h2>
-    <p>
-      If you want to print directly from XOWA, you will need to do extra configuration.
-    </p>
-    <ul>
-      <li>
-        Find your prefs.js file
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        On Linux, the folder would be <span class='path'>/home/your_user_name/.mozilla/eclipse</span>
-      </dd>
-      <dd>
-        On Windows XP, the folder would be <span class='path'>C:\Documents and Settings\your_user_name\Application Data\Mozilla\eclipse</span>
-      </dd>
-      <dd>
-        On Windows 7, the folder would be <span class='path'>C:\Users\your_user_name\Application Data\Mozilla\eclipse</span>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Open the file with a text-editor (Notepad++ on Windows)
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.004.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.004.zip</a>
       </li>
       <li>
-        Add the following to the bottom of the file: <span class="code">user_pref("print.show_print_progress", false);</span>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.005.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.005.zip</a>
       </li>
       <li>
-        Restart XOWA
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.006.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.006.zip</a>
       </li>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_2" title="Options/Menus">Options/Menus</a>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.007.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.007.zip</a>
       </li>
       <li>
-        Add the following line: <span class="code">add_btn_default('xowa.file.print');</span>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.008.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.008.zip</a>
       </li>
       <li>
-        Click Save in the upper left-hand corner
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.009.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.009.zip</a>
       </li>
       <li>
-        Right-click and choose Print
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.010.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.010.zip</a>
+      </li>
+      <li>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.011.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.011.zip</a>
+      </li>
+      <li>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.012.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.012.zip</a>
+      </li>
+      <li>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.013.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.013.zip</a>
+      </li>
+      <li>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.014.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.014.zip</a>
+      </li>
+      <li>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.015.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.015.zip</a>
+      </li>
+      <li>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.016.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.016.zip</a>
+      </li>
+      <li>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.017.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.017.zip</a>
+      </li>
+      <li>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.018.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_html_db.018.zip</a>
+      </li>
+      <li>
+        <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_xtn.search.core.zip" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-08_xtn.search.core.zip</a>
       </li>
     </ul>
   
